# config/docs/swagger.yml
@@ -74,6 +74,63 @@ paths:
                     type: string
                     example: Cannot read properties of undefined
 
+  /users/admins:
+    get:
+      summary: Получить всех администраторов
+      description: Возвращает список пользователей с ролью ADMIN. Также включает общее количество и количество страниц.
+      tags:
+        - Users
+      responses:
+        '200':
+          description: Успешный ответ с данными админов
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  data:
+                    type: array
+                    items:
+                      type: object
+                      properties:
+                        id:
+                          type: string
+                        username:
+                          type: string
+                        email:
+                          type: string
+                        roleId:
+                          type: string
+                        role:
+                          type: object
+                          properties:
+                            id:
+                              type: string
+                            name:
+                              type: string
+                        createdAt:
+                          type: string
+                          format: date-time
+                        updatedAt:
+                          type: string
+                          format: date-time
+                  total_count:
+                    type: integer
+                    example: 3
+                  total_page:
+                    type: integer
+                    example: 1
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Unexpected error. Please try again later.
+
   /users/sign-up:
     post:
       summary: Регистрация нового пользователя
@@ -992,6 +1049,68 @@ paths:
 
 
 
+  /users/del-user:
+    delete:
+      summary: Удалить пользователя по email
+      description: Удаляет пользователя, если он существует в базе данных.
+      tags:
+        - Users
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              required:
+                - email
+              properties:
+                email:
+                  type: string
+                  format: email
+                  example: user@example.com
+      responses:
+        '200':
+          description: Пользователь успешно удалён
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: User deleted successfully
+        '400':
+          description: Неверный запрос — отсутствует email
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Email is required
+        '404':
+          description: Пользователь с таким email не найден
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: User with this email not found
+        '500':
+          description: Внутренняя ошибка сервера
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: Server error
+
+
 
   /users/get-my-sessions:
     get:
@@ -1304,27 +1423,6 @@ paths:
                     example: Server error
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
   /users/roles:
     get:
       summary: Получить список всех ролей
@@ -1504,7 +1602,6 @@ paths:
           description: Ошибка сервера
 
 
-
   /users/average-time-statistics/{period}:
     get:
       summary: Получить среднюю продолжительность сессии
@@ -1586,7 +1683,6 @@ paths:
                     type: string
                     example: Unexpected error. Please try again later.
 
-
   /users/browsers_statistics/{period}:
     get:
       summary: Get browser usage statistics by period and device type
@@ -1642,7 +1738,6 @@ paths:
                       example: "25%"
         '500':
           description: Internal server error
-
 
   /users/devices-statistics/{period}:
     get:
